--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "preinstall": "npx npm-force-resolutions"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.26",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "eslint": "^7.21.0",
+    "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
