--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "start": "parcel serve ./src/index.html",
     "build": "parcel build ./src/index.html",
-    "preinstall": "npx npm-force-resolutions"
+    "preinstall": "npx npm-force-resolutions",
+    "deploy": "npm build && gh-pages -d dist"
   },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
@@ -18,11 +19,12 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "parcel": "next",
-    "postcss-preset-env": "^6.7.0",
     "postcss-custom-media": "^7.0.0",
     "postcss-modules": "^3.0.0",
-    "postcss-nested": "^4.2.3"
+    "postcss-nested": "^4.2.3",
+    "postcss-preset-env": "^6.7.0"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
