--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "start": "parcel serve ./src/index.html",
     "build": "parcel build ./src/index.html",
     "preinstall": "npx npm-force-resolutions",
-    "deploy": "npm build && gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
