--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "preinstall": "npx npm-force-resolutions",
     "deploy": "npm run build && gh-pages -d dist"
   },
+  "targets": {
+    "default": {
+      "publicUrl": "./"
+    }
+  },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
