--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "eslint": "^7.21.0",
+    "history": "^5.0.0",
     "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
