--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
       "publicUrl": "./"
     }
   },
+  "reactSnap": {
+    "source": "./dist"
+  },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
@@ -25,7 +28,8 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0"
+    "react-router-dom": "^6.0.0-beta.0",
+    "react-snap": "^1.23.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
