--- a/package.json
+++ b/package.json
@@ -28,13 +28,11 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
-    "react-snap": "^1.23.0"
+    "react-router-dom": "^6.0.0-beta.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "parcel": "next",
-    "postcss-custom-media": "^7.0.0",
+    "parcel": "2.0.0-beta.1",
     "postcss-modules": "^3.0.0",
     "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0"
