--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "start": "parcel serve ./src/index.html",
-    "build": "parcel build ./src/index.html",
+    "build": "parcel build --no-content-hash ./src/index.html",
     "preinstall": "npx npm-force-resolutions",
     "deploy": "npm run build && gh-pages -d dist",
     "postbuild": "echo '/* /index.html 200' | cat >dist/_redirects"
