--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0"
+    "react-router-dom": "^6.0.0-beta.0",
+    "react-router-hash-link": "^2.4.0"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
