Add credit card form

--- a/.postcssrc
+++ b/.postcssrc
@@ -1,7 +1,8 @@
 {
   "plugins": {
+    "postcss-custom-media": {},
     "postcss-nested": {},
     "postcss-modules": {},
-    "postcss-preset-env": {}
+    "postcss-preset-env": {},
   }
 }
