--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "eslint": "^7.21.0",
     "history": "^5.0.0",
+    "payment": "^2.4.0",
     "pure-react-carousel": "^1.27.6",
     "react": "^16.13.1",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-router": "^6.0.0-beta.0",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "gh-pages": "^3.1.0",
     "parcel": "2.0.0-beta.1",
+    "postcss-custom-media": "^7.0.0",
     "postcss-modules": "^3.0.0",
     "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0"
