--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "axios": "^0.21.1",
     "eslint": "^7.21.0",
     "history": "^5.0.0",
     "payment": "^2.4.0",
     "pure-react-carousel": "^1.27.6",
+    "query-string": "^7.0.0",
     "react": "^16.13.1",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^16.13.1",
@@ -28,7 +30,8 @@
     "react-input-mask": "^3.0.0-alpha.2",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-router-hash-link": "^2.4.0"
+    "react-router-hash-link": "^2.4.0",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
