--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@parcel/babel-plugin-transform-runtime": "^2.0.0-nightly.1823",
     "gh-pages": "^3.1.0",
     "netlify-cli": "^3.13.10",
     "parcel": "2.0.0-beta.1",
