--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
+    "email-templates": "^8.0.4",
     "eslint": "^7.21.0",
     "faunadb": "^4.1.3",
+    "handlebars": "^4.7.7",
     "history": "^5.0.0",
+    "html-to-text": "^7.0.0",
     "juno-nodejs": "^1.0.14",
+    "mjml": "^4.9.0",
+    "nodemailer": "^6.5.0",
     "payment": "^2.4.0",
+    "pug": "^3.0.2",
     "pure-react-carousel": "^1.27.6",
     "query-string": "^7.0.0",
     "react": "^16.13.1",
