--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
     "email-templates": "^8.0.4",
-    "eslint": "^7.21.0",
     "faunadb": "^4.1.3",
     "handlebars": "^4.7.7",
     "history": "^5.0.0",
@@ -43,6 +42,8 @@
   },
   "devDependencies": {
     "@parcel/babel-plugin-transform-runtime": "^2.0.0-nightly.1823",
+    "eslint": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
     "gh-pages": "^3.1.0",
     "netlify-cli": "^3.13.10",
     "parcel": "2.0.0-beta.1",
