--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "email-templates": "^8.0.4",
     "faunadb": "^4.1.3",
     "handlebars": "^4.7.7",
