--- a/package.json
+++ b/package.json
@@ -3,13 +3,11 @@
   "version": "0.1.0",
   "scripts": {
     "start": "parcel serve ./src/index.html",
-    "build": "parcel build --no-content-hash ./src/index.html",
+    "build": "parcel build ./src/index.html",
+    "lint": "eslint src functions --ext .js",
     "preinstall": "npx npm-force-resolutions",
-    "deploy": "npm run build && gh-pages -d dist",
+    "prepare": "husky install",
     "postbuild": "echo '/* /index.html 200' | cat >dist/_redirects"
-  },
-  "reactSnap": {
-    "source": "./dist"
   },
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.19.26",
@@ -19,18 +17,16 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
-    "email-templates": "^8.0.4",
     "faunadb": "^4.1.3",
     "handlebars": "^4.7.7",
     "history": "^5.0.0",
     "html-to-text": "^7.0.0",
+    "husky": "^6.0.0",
     "juno-nodejs": "^1.0.14",
     "mjml": "^4.9.0",
     "nodemailer": "^6.5.0",
     "payment": "^2.4.0",
-    "pug": "^3.0.2",
     "pure-react-carousel": "^1.27.6",
-    "qrcode.react": "^1.0.1",
     "query-string": "^7.0.0",
     "react": "^16.13.1",
     "react-credit-cards": "^0.8.3",
@@ -45,8 +41,9 @@
   "devDependencies": {
     "@parcel/babel-plugin-transform-runtime": "^2.0.0-nightly.1823",
     "eslint": "^7.23.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
-    "gh-pages": "^3.1.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "netlify-cli": "^3.13.10",
     "parcel": "2.0.0-beta.1",
     "postcss-custom-media": "^7.0.0",
