--- a/.postcssrc
+++ b/.postcssrc
@@ -1,8 +1,10 @@
 {
   "plugins": {
+    "postcss-preset-env": {
+        "autoprefixer": { "grid": true }
+    },
     "postcss-custom-media": {},
     "postcss-nested": {},
     "postcss-modules": {},
-    "postcss-preset-env": {},
   }
 }
