--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "copy-to-clipboard": "^3.3.1",
     "faunadb": "^4.1.3",
     "handlebars": "^4.7.7",
     "history": "^5.0.0",
