--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@rooks/use-mutation-observer": "^4.11.0",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
