--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "no-confusing-arrow": "off",
     "import/no-unresolved": "off",
     "jsx-a11y/anchor-is-valid": "off",
+    "no-console": "off",
     "import/order": "off"
   }
 }
