Fix image sizes and validator

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "crawler": "node jupiterCrawl.js",
     "dev": "next dev",
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint --dir pages --dir components --dir data --dir hooks --dir types",
     "validate": "npm ls",
@@ -16,7 +17,6 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@brainhubeu/react-carousel": "^2.0.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
@@ -36,21 +36,23 @@
     "nodemailer": "^6.5.0",
     "payment": "^2.4.0",
     "pure-react-carousel": "^1.27.6",
-    "query-string": "^7.0.0",
     "react": "^18.2.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
     "react-hotjar": "^5.0.0",
     "react-input-mask": "^3.0.0-alpha.2",
+    "sharp": "^0.30.7",
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.2.3",
     "eslint": "8.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-next": "^12.2.3",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.0",
+    "next-plugin-yaml": "^1.0.1",
     "postcss": "^8.4.14",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-nested": "^5.0.6",
