--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
+    "embla-carousel-autoplay": "^7.0.0",
+    "embla-carousel-react": "^7.0.0",
     "faunadb": "^4.1.3",
     "handlebars": "^4.7.7",
     "history": "^5.0.0",
@@ -35,7 +37,6 @@
     "next": "^12.2.2",
     "nodemailer": "^6.5.0",
     "payment": "^2.4.0",
-    "pure-react-carousel": "^1.27.6",
     "react": "^18.2.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
