--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.40.1",
     "@next/bundle-analyzer": "^12.2.3",
     "@types/nodemailer": "^6.4.5",
     "@types/react": "^17.0.38",
