Prepare for 2024 campaign

--- a/data/campaigns.yml
+++ b/data/campaigns.yml
@@ -110,20 +110,17 @@
   featured: true
   short_description: Ajude a trazer a alegria do Natal para mais de 1200 crianças.
   long_description: >-
-    Na medida em que se aproxima o Natal, começamos a perceber uma energia
-    positiva que vai contagiando a todos e trazendo à tona os sentimentos de
-    fraternidade e compaixão. Com o apoio desses corações generosos, a campanha
-    Sacolinhas de Natal tem garantido todos os anos um Natal mais feliz para
-    milhares de crianças.#Neste ano de 2023 a nossa meta é preparar 1.200
-    sacolinhas de Natal para crianças de 0 a 10 anos nas comunidades assistidas
-    pela Associação Caminho de Casa: Bela Vista, Chácara Três Meninas,
-    Jundiapeba, Kampala e Pontilhão da Penha.#Os valores arrecadados
-    serão integralmente convertidos em presentes, brinquedos, material escolar,
-    livros, material de higiene, fraldas e enxovais e enviados aos núcleos de
-    voluntários dentro das comunidades, que farão a montagem das sacolinhas, a
-    festa de Natal e a entrega para as crianças cadastradas.#Há muito o que
-    fazer e contamos com a generosidade de todos para movimentar essa engrenagem
-    do bem!
+    Sacolinhas de Natal 2024: Espalhe Sorrisos e Esperança 🎅🏽🎁#O Natal é um
+    momento mágico que desperta fraternidade e compaixão em cada coração.#Com
+    essa energia, nossa campanha Sacolinhas de Natal 2024 tem o objetivo de
+    garantir um Natal inesquecível para 1.200 crianças de 0 a 10 anos das
+    comunidades assistidas por nós: Bela Vista, Buraco do Tatu, Chácara Três
+    Meninas, Chaparral, Jundiapeba, Kampala e Morro.#As doações arrecadadas
+    serão convertidas em brinquedos, doces, materiais escolares, livros,
+    enxovais de bebê, fraldas, kits de higiene, roupas e calçados, entregues por
+    nossos voluntários em festas natalinas cheias de alegria.#Contamos com a sua
+    generosidade para transformar vidas!#Um pequeno gesto pode trazer um grande
+    sorriso.#Doe agora e faça parte dessa corrente de amor. 🌟
   cover_picture: sacolinhas-cover.jpg
   slide_pictures:
     - sacolinhas-1.jpg
