--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@rooks/use-mutation-observer": "^4.11.0",
-    "axios": "^0.21.1",
+    "axios": "^1.7.9",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
     "embla-carousel-autoplay": "^7.0.0",
@@ -35,12 +35,12 @@
     "juno-nodejs": "^1.0.14",
     "mjml": "^4.9.0",
     "netlify-cli": "^15.4.1",
-    "next": "^12.2.2",
+    "next": "^15.1.7",
     "nodemailer": "^6.5.0",
     "payment": "^2.4.0",
-    "react": "^18.2.0",
-    "react-credit-cards": "^0.8.3",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-credit-cards-2": "^1.0.3",
+    "react-dom": "^18.3.1",
     "react-hotjar": "^5.0.0",
     "react-input-mask": "^3.0.0-alpha.2",
     "sharp": "^0.30.7",
@@ -50,7 +50,7 @@
     "@netlify/plugin-nextjs": "^4.40.1",
     "@next/bundle-analyzer": "^12.2.3",
     "@types/nodemailer": "^6.4.5",
-    "@types/react": "^17.0.38",
+    "@types/react": "^18.3.18",
     "@types/react-input-mask": "^3.0.0-alpha.2",
     "@typescript-eslint/eslint-plugin": "~5.33.0",
     "@typescript-eslint/parser": "~5.33.0",
