Change communities for 2025

--- a/data/campaigns.yml
+++ b/data/campaigns.yml
@@ -115,12 +115,13 @@
     essa energia, nossa campanha Sacolinhas de Natal 2025 tem o objetivo de
     garantir um Natal inesquecível para 1.200 crianças de 0 a 10 anos das
     comunidades assistidas por nós: Bela Vista, Buraco do Tatu, Chácara Três
-    Meninas, Chaparral, Jundiapeba, Kampala e Morro.#As doações arrecadadas
-    serão convertidas em brinquedos, doces, materiais escolares, livros,
-    enxovais de bebê, fraldas, kits de higiene, roupas e calçados, entregues por
-    nossos voluntários em festas natalinas cheias de alegria.#Contamos com a sua
-    generosidade para transformar vidas!#Um pequeno gesto pode trazer um grande
-    sorriso.#Doe agora e faça parte dessa corrente de amor. 🌟
+    Meninas, Chácara dos Baianos, Chaparral, Kampala, Limoeiro, Vila Flávia
+    e Morro.#As doações arrecadadas serão convertidas em brinquedos, doces,
+    materiais escolares, livros, enxovais de bebê, fraldas, kits de higiene,
+    roupas e calçados, entregues por nossos voluntários em festas natalinas
+    cheias de alegria.#Contamos com a sua generosidade para transformar vidas!#Um
+    pequeno gesto pode trazer um grande sorriso.#Doe agora e faça parte dessa
+    corrente de amor. 🌟
   cover_picture: sacolinhas-cover.jpg
   slide_pictures:
     - sacolinhas-1.jpg
