--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@prisma/client": "^6.18.0",
     "@rooks/use-mutation-observer": "^4.11.0",
     "axios": "^1.7.9",
     "classnames": "^2.3.1",
     "copy-to-clipboard": "^3.3.1",
+    "dotenv": "^17.2.3",
     "embla-carousel-autoplay": "^7.0.0",
     "embla-carousel-react": "^7.0.0",
     "faunadb": "^4.1.3",
@@ -34,10 +36,12 @@
     "husky": "^6.0.0",
     "juno-nodejs": "^1.0.14",
     "mjml": "^4.9.0",
+    "mysql2": "^3.15.3",
     "netlify-cli": "^15.4.1",
     "next": "^15.1.7",
     "nodemailer": "^6.5.0",
     "payment": "^2.4.0",
+    "prisma": "^6.18.0",
     "react": "^18.3.1",
     "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.3.1",
@@ -66,6 +70,6 @@
     "postcss-nested": "^5.0.6",
     "postcss-preset-env": "^7.7.2",
     "prettier": "^2.7.1",
-    "typescript": "^4.5.4"
+    "typescript": "^5.9.3"
   }
 }
